--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                        </li>
                     </ul>
 				</div>
+				<div class="pagination">
+				  <span class="pagination__left">
+				    
+				  </span>
+				   <span class="pagination__right">
+				    
+				  </span>
+				</div>
 			</main>
 </div>
 <!-- footer -->
