--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                        <li  class="projects__item">
                             <div class="projects__box">
                                 <h2 class="projects__title">
-                                    Заголовок
+                                    
                                 </h2>
                                 <a class="projects__link" href="#">
                                     <img class="projects__img" src="img/test.png" alt="скриншот">
@@ -57,7 +57,7 @@
                                 <span class="projects__text">
                                     Далеко-далеко за словесными горами в стране. 
                                 </span>
-                                <button type="button" class="btn projects__btn">Подробнее</button>
+                                <a href="#" target="_blank" class="btn projects__btn">Подробнее</a>
                             </div>
                             
                        </li>
@@ -72,35 +72,21 @@
                                 <span class="projects__text">
                                     Далеко-далеко за словесными горами в стране. 
                                 </span>
-                                <button type="button" class="btn projects__btn">Подробнее</button>
+                                 <a href="#" target="_blank" class="btn projects__btn">Подробнее</a>
                             </div>
                        </li>
                        <li  class="projects__item">
                             <div class="projects__box">
                                 <h2 class="projects__title">
-                                    Заголовок
+                                    Верстка страницы оплаты
                                 </h2>
                                 <a class="projects__link" href="#">
-                                    <img class="projects__img" src="img/test.png" alt="скриншот">
+                                    <img class="projects__img" src="img/cards.jpg" alt="скриншот">
                                 </a>
                                 <span class="projects__text">
-                                    Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Продолжил, ipsum ты запятой рукописи которое жаренные гор пустился! 
+                                    Выполнение тестового задания по верстке страницы ввода данных кредитной карты. 
                                 </span>
-                                <button type="button" class="btn projects__btn">Подробнее</button>
-                            </div>
-                       </li>
-                       <li  class="projects__item">
-                            <div class="projects__box">
-                                <h2 class="projects__title">
-                                    Заголовок
-                                </h2>
-                                <a class="projects__link" href="#">
-                                    <img class="projects__img" src="img/test.png" alt="скриншот">
-                                </a>
-                                <span class="projects__text">
-                                    Далеко-далеко за словесными горами в стране. 
-                                </span>
-                                <button type="button" class="btn projects__btn">Подробнее</button>
+                                <a href="/cards" target="_blank" class="btn projects__btn">Подробнее</a>
                             </div>
                        </li>
                        <li  class="projects__item">
@@ -114,7 +100,21 @@
                                 <span class="projects__text">
                                     Далеко-далеко за словесными горами в стране. 
                                 </span>
-                                <button type="button" class="btn projects__btn">Подробнее</button>
+                                <a href="#" target="_blank" class="btn projects__btn">Подробнее</a>
+                            </div>
+                       </li>
+                       <li  class="projects__item">
+                            <div class="projects__box">
+                                <h2 class="projects__title">
+                                    Заголовок
+                                </h2>
+                                <a class="projects__link" href="#">
+                                    <img class="projects__img" src="img/test.png" alt="скриншот">
+                                </a>
+                                <span class="projects__text">
+                                    Далеко-далеко за словесными горами в стране. 
+                                </span>
+                                <a href="#" target="_blank" class="btn projects__btn">Подробнее</a>
                             </div>
                        </li>
                        <li  class="projects__item">
@@ -128,7 +128,7 @@
                                 <span class="projects__text">
                                     Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. 
                                 </span>
-                                <button type="button" class="btn projects__btn">Подробнее</button>
+                                <a href="#" target="_blank" class="btn projects__btn">Подробнее</a>
                             </div>
                        </li>
                     </ul>
