Добавил ссылку на гит тестового задания

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     Выполнение тестового задания по верстке страницы ввода данных кредитной карты. 
                                 </span>
                                 <div class="icon-list">
-                                    <a href="#" target="_blank">
+                                    <a href="https://github.com/kawaiidon/test-task-credic-card-check" target="_blank">
                                         <img class="icon-list__item" src="img/github.png" alt="github">
                                     </a>
                                     <a href="/cards" target="_blank">
